--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 databases:
   - name: rafita
+    plan: free
     databaseName: rafita
     user: rafita
 
 services:
   - type: web
+    plan: free
     name: rafita
     env: python
     buildCommand: "./build.sh"
